<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home">

    <TextView
        android:id="@+id/textView33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="44dp"
        android:text="Budget App Homepage"
        android:textColor="@color/lgreen"

        android:textFontWeight="900"
        android:textSize="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view4"
        android:layout_width="366dp"
        android:layout_height="112dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="352dp"

        android:background="@drawable/round"
        android:onClick="showMore"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view3"
        android:layout_width="366dp"
        android:layout_height="112dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="228dp"

        android:background="@drawable/round"
        android:onClick="showGraph"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view2"
        android:layout_width="366dp"
        android:layout_height="112dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="105dp"

        android:background="@drawable/round"
        android:onClick="showBudget"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView34"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="117dp"
        android:text="Create New Budget"
        android:textColor="@color/lgreen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView41"
        android:layout_width="330dp"
        android:layout_height="38dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="143dp"
        android:text="@string/notes1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView42"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="243dp"
        android:text="Show Graph"
        android:textColor="@color/lgreen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView43"
        android:layout_width="335dp"
        android:layout_height="35dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="270dp"
        android:text="@string/notes2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView44"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="365dp"
        android:text="Log out"
        android:textColor="@color/lgreen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView45"
        android:layout_width="326dp"
        android:layout_height="37dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="391dp"
        android:text="@string/notes3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv"
        android:layout_width="363dp"
        android:layout_height="128dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="490dp"
        android:text=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>