<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Graphs">

    <View
        android:id="@+id/view5"
        android:layout_width="366dp"
        android:layout_height="112dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="105dp"

        android:background="@drawable/round"
        android:onClick="showPie"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView38"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="365dp"
        android:text="More Information"
        android:textColor="@color/lgreen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView46"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="243dp"
        android:text="Show Graph"
        android:textColor="@color/lgreen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView47"
        android:layout_width="330dp"
        android:layout_height="38dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="140dp"
        android:text="@string/notes4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView48"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="117dp"
        android:text="Pie Chart"
        android:textColor="@color/lgreen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view6"
        android:layout_width="366dp"
        android:layout_height="112dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="352dp"

        android:background="@drawable/round"
        android:onClick="showLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view7"
        android:layout_width="366dp"
        android:layout_height="112dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="228dp"

        android:background="@drawable/round"
        android:onClick="showLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView49"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="44dp"
        android:text="Graphs"
        android:textColor="@color/lgreen"

        android:textFontWeight="900"
        android:textSize="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView50"
        android:layout_width="326dp"
        android:layout_height="37dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="391dp"
        android:text="@string/notes6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView51"
        android:layout_width="335dp"
        android:layout_height="35dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="270dp"
        android:text="@string/notes5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView52"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="243dp"
        android:text="Line Chart"
        android:textColor="@color/lgreen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView53"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="365dp"
        android:text="Bar Chart"
        android:textColor="@color/lgreen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="522dp"
        android:onClick="graphBacktoHome"
        android:text="Back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>